# temporis

./: pyproject.toml
src/temporis/: temporis.py
